--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'Satisfy';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Satisfy Regular'), local('Satisfy-Regular'), url(../font/rP2Hp2yn6lkG50LoCZOIHQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	font-style: normal;
+	font-weight: 400;
+	src: local('Satisfy Regular'), local('Satisfy-Regular'), url(../font/op.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 #jsi-cherry-container {
@@ -20,8 +20,8 @@
 }
 
 #footer {
-  position: fixed;
-  top: 10px;
+	position: fixed;
+	top: 10px;
 	right: 10px;
 }
 
@@ -37,7 +37,7 @@
 }
 
 #envelope {
-  display: none;
+	display: none;
 }
 
 body {
@@ -102,19 +102,87 @@ span {
 }
 
 /* reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -128,7 +196,18 @@ html {
 	content-zooming: none;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary {
 	display: block;
 }
 
@@ -194,7 +273,7 @@ section.container {
 	-moz-perspective: 1000px;
 }
 
-section.container > form.flip {
+section.container>form.flip {
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -208,7 +287,8 @@ section.container > form.flip {
 	-moz-transform-origin: center center;
 }
 
-section.container > form.flip > .front, section.container > form.flip > .back {
+section.container>form.flip>.front,
+section.container>form.flip>.back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -217,7 +297,7 @@ section.container > form.flip > .front, section.container > form.flip > .back {
 	-moz-backface-visibility: hidden;
 }
 
-section.container > form.flip > .back {
+section.container>form.flip>.back {
 	-webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
 	transform: rotateY(180deg);
@@ -225,13 +305,13 @@ section.container > form.flip > .back {
 	box-shadow: inset 0 10px 30px -10px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 2px 0 rgba(255, 255, 255, 0.2);
 }
 
-section.container:target > form.flip {
+section.container:target>form.flip {
 	-webkit-transform: rotateY(0deg);
 	-moz-transform: rotateY(0deg);
 	transform: rotateY(0deg);
 }
 
-.no-csstransforms3d section.container:target > form.flip > .back {
+.no-csstransforms3d section.container:target>form.flip>.back {
 	display: none;
 }
 
@@ -294,7 +374,8 @@ section.container:target > form.flip {
 	transform-origin: left top;
 }
 
-#lid .flip > .front, #lid .flip > .back {
+#lid .flip>.front,
+#lid .flip>.back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -303,7 +384,7 @@ section.container:target > form.flip {
 	backface-visibility: hidden;
 }
 
-#lid .flip > .back {
+#lid .flip>.back {
 	-webkit-transform: rotateX(180deg);
 	-moz-transform: rotateX(180deg);
 	transform: rotateX(180deg);
@@ -321,22 +402,25 @@ section.container:target > form.flip {
 	transition-delay: 0s;
 }
 
-#letter .flip > div, #lid .flip > div, section.container > form.flip > div {
+#letter .flip>div,
+#lid .flip>div,
+section.container>form.flip>div {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-#lid .flip .front, section.container > form.flip .front {
+#lid .flip .front,
+section.container>form.flip .front {
 	background: beige url("../img/bg.png");
 	border: 1px #eae1d5 solid;
 	box-shadow: inset 0 0 10px 1px rgba(255, 255, 255, 0.6), 0 2px 3px -2px rgba(0, 0, 0, 0.6);
 	padding: 20px 30px;
 	color: #837362;
-	text-shadow: 0 1px 0 #fff,0 1px 0 #fff;
+	text-shadow: 0 1px 0 #fff, 0 1px 0 #fff;
 }
 
-section.container > form.flip > .front {
+section.container>form.flip>.front {
 	font-size: 1.25em;
 	background: beige url("../img/bg.png");
 	background: url("../img/stamp.png") no-repeat 450px 20px, url("../img/bg.png");
@@ -401,7 +485,7 @@ section.container > form.flip > .front {
 #letter .container {
 	position: absolute;
 	width: 100%;
-  /*height: 50%;*/
+	/*height: 50%;*/
 	-webkit-perspective: 800px;
 	-moz-perspective: 800px;
 	perspective: 800px;
@@ -431,7 +515,8 @@ section.container > form.flip > .front {
 	transform-origin: left top;
 }
 
-#letter .flip > .front, #letter .flip > .back {
+#letter .flip>.front,
+#letter .flip>.back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -440,7 +525,7 @@ section.container > form.flip > .front {
 	backface-visibility: hidden;
 }
 
-#letter .flip > .back {
+#letter .flip>.back {
 	-webkit-transform: rotateX(180deg);
 	-moz-transform: rotateX(180deg);
 	transform: rotateX(180deg);
@@ -545,7 +630,8 @@ input[type="submit"]:hover {
 }
 
 /*-------ie8-----------*/
-.container.target > form.flip > .back, #content.target #letter .flip .front {
+.container.target>form.flip>.back,
+#content.target #letter .flip .front {
 	display: none;
 }
 
