fix warning in style.css & refine some css and js

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	font-family: 'Satisfy';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Satisfy Regular'), local('Satisfy-Regular'), url(../font/op.woff2) format('woff2');
+	src: local('Satisfy Regular'), local('Satisfy-Regular'), url(../font/rP2Hp2yn6lkG50LoCZOIHQ.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -193,7 +193,7 @@ video {
 
 html {
 	line-height: 1;
-	content-zooming: none;
+	-ms-content-zooming: none;
 }
 
 article,
@@ -277,12 +277,16 @@ section.container>form.flip {
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	transform: rotateY(180deg);
 	-webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
+	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
+	transition: -webkit-transform 0.7s 0s;
 	-webkit-transition: -webkit-transform 0.7s 0s;
 	-moz-transition: -moz-transform 0.7s 0s;
+	transform-origin: center center;
 	-webkit-transform-origin: center center;
 	-moz-transform-origin: center center;
 }
@@ -622,6 +626,7 @@ input[type="submit"] {
 	border: 1px solid #9b4849;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5);
 	color: #fff;
+	transition: background .5s;
 	-webkit-transition: background .5s;
 }
 
