--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,10 @@
 	position: relative;
 	margin: 0 auto;
 	display: none;
-	width: 32px;
-	height: 32px;
+	width: 40px;
+	height: 40px;
 	background: url(../img/play.png) no-repeat;
 	cursor: pointer;
-	opacity: 0.2;
 }
 
 #btn {
@@ -253,9 +252,9 @@ a {
 	display: block;
 }
 
-a:hover {
+/* a:hover {
 	color: #783839;
-}
+} */
 
 #open {
 	width: 150px;
@@ -269,16 +268,20 @@ a:hover {
 	float: right;
 }
 
-#flip2back {
+/* #flip2back {
 	margin-right: -128px;
 	margin-top: 150px;
 	float: right;
-}
+} */
 
 #close {
 	position: absolute;
-	bottom: 10px;
-	right: 10px;
+	bottom: 0px;
+	right: 0px;
+	display: block;
+	width: 100%;
+	height: 100%;
+	cursor: grab;
 }
 
 
