--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,15 @@
 	display: none;
 	width: 40px;
 	height: 40px;
-	background: url(../img/play.png) no-repeat;
 	cursor: pointer;
+}
+
+.play {
+	background: url(../img/play.png) no-repeat;
+}
+
+.mute {
+	background: url(../img/mute.png) no-repeat;
 }
 
 #btn {
