--- a/css/letter.css
+++ b/css/letter.css
@@ -1,63 +1,19 @@
-@font-face {
-	font-family: 'Satisfy';
-	font-style: normal;
-	font-weight: 400;
-	src: local('Satisfy Regular'), local('Satisfy-Regular'), url(../font/op.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-#jsi-cherry-container {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: transparent;
-	overflow: hidden;
-	opacity: 0.618;
-	z-index: 99;
-}
-
-#footer {
-	position: fixed;
-	top: 10px;
-	right: 10px;
-}
-
-#music_btn {
-	position: relative;
-	margin: 0 auto;
-	display: none;
-	width: 40px;
-	height: 40px;
-	cursor: pointer;
-}
-
-.play {
-	background: url(../img/play.png) no-repeat;
-}
-
-.mute {
-	background: url(../img/mute.png) no-repeat;
-}
-
-#btn {
+#wax {
 	display: block;
 	width: 150px;
 	height: 150px;
-	background: url(../img/stitch.png) no-repeat;
+	background: url(../img/wax.png) no-repeat;
 	background-position: 0 0;
 }
 
-#half {
+#wax-half {
 	display: none;
 	margin: 0 auto;
 	margin-top: 45px;
 	margin-bottom: -120px;
 	width: 139px;
 	height: 75px;
-	background: url(../img/half.png) no-repeat;
+	background: url(../img/wax-half.png) no-repeat;
 }
 
 #stamp {
@@ -78,191 +34,6 @@
 
 #envelope {
 	display: none;
-}
-
-body {
-	opacity: 0;
-}
-
-.typed-cursor {
-	opacity: 0;
-	animation: blink 0.7s infinite;
-	-webkit-animation: blink 0.7s infinite;
-	-moz-animation: blink 0.7s infinite;
-}
-
-@keyframes blink {
-	0% {
-		opacity: 0;
-	}
-
-	50% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 0;
-	}
-}
-
-@-webkit-keyframes blink {
-	0% {
-		opacity: 0;
-	}
-
-	50% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 0;
-	}
-}
-
-@-moz-keyframes blink {
-	0% {
-		opacity: 0;
-	}
-
-	50% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 0;
-	}
-}
-
-/* reset */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font: inherit;
-	font-size: 100%;
-	vertical-align: baseline;
-}
-
-html {
-	line-height: 1;
-	-ms-content-zooming: none;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary {
-	display: block;
-}
-
-/* body */
-
-body {
-	font-family: Satisfy, serif;
-	color: #837362;
-	background: #fbf8f7;
-}
-
-h2 {
-	font-size: 1.5em;
-	line-height: 1.6;
-	float: left;
-}
-
-/* links */
-
-a {
-	color: #9b4849;
-	text-decoration: none;
-	display: block;
 }
 
 #open {
@@ -287,8 +58,7 @@ a {
 	cursor: grab;
 }
 
-
-/*****************************/
+/**************container***************/
 
 section.container {
 	position: relative;
@@ -346,6 +116,8 @@ section.container:target>form.flip {
 	display: none;
 }
 
+/* lid */
+
 .container#lid {
 	position: relative;
 	width: 100%;
@@ -386,6 +158,8 @@ section.container:target>form.flip {
 	display: block;
 	top: -150px;
 }
+
+/* flip */
 
 #lid .flip {
 	width: 100%;
@@ -492,19 +266,7 @@ section.container>form.flip>.front {
 	box-shadow: inset 0 0 10px 1px rgba(255, 255, 255, 0.6), 0 -2px 4px -3px rgba(0, 0, 0, 0.75), 0 2px 3px -2px rgba(0, 0, 0, 0.6);
 }
 
-#letter {
-	background: #fafafa;
-	width: 90%;
-	height: 95%;
-	position: absolute;
-	left: 5%;
-	top: 5%;
-	z-index: 0;
-	transition: 0s 0s;
-	-webkit-transition: .5s .5s;
-	-moz-transition: .5s .5s;
-	-o-transition: 0s 0s;
-}
+/* data */
 
 #data {
 	height: 210px;
@@ -523,6 +285,22 @@ section.container>form.flip>.front {
 #data::-webkit-scrollbar-track {
 	border-radius: 10px;
 	background-color: #eae1d5;
+}
+
+/* letter */
+
+#letter {
+	background: #fafafa;
+	width: 90%;
+	height: 95%;
+	position: absolute;
+	left: 5%;
+	top: 5%;
+	z-index: 0;
+	transition: 0s 0s;
+	-webkit-transition: .5s .5s;
+	-moz-transition: .5s .5s;
+	-o-transition: 0s 0s;
 }
 
 #content:target #letter {
