--- a/css/sakura.css
+++ b/css/sakura.css
@@ -1,3 +1,16 @@
+#jsi-cherry-container {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    overflow: hidden;
+    opacity: 0.618;
+    z-index: 99;
+}
+
 .heart {
     width: 200px;
     height: 200px;
