--- a/css/letter.css
+++ b/css/letter.css
@@ -245,6 +245,8 @@ section.container>form.flip>.front {
 	box-shadow: inset 0 10px 30px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* top */
+
 #top {
 	text-align: right;
 	background: beige url("../img/texture.png");
@@ -274,7 +276,7 @@ section.container>form.flip>.front {
 }
 
 #data::-webkit-scrollbar {
-	width: 10px;
+	width: 11px;
 }
 
 #data::-webkit-scrollbar-thumb {
